# name-classifier

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py
src/modules/train/: train.py
src/modules/transform/: preprocess.py
src/notebook/: ExploratoryDataAnalysis.ipynb  ModellingAnalysis.ipynb
tests/: test_cleanNames.py
