[tool.poetry]
name = "name-classifier"
version = "0.1.0"
description = "name-classifier"
authors = ["Kyosuke Morita <kyosuke1029@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^8.1.2"
pandas = "^1.2.3"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
